Update loading image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <pre>
 &lt;ul id="step-pagination" class="nav nav-pills">
 	&lt;li id="pagination-loading">
-		&lt;img style="margin:0;" src="https://www.codepolitan.com/assets/img/loading.gif">
+		&lt;img style="margin:0;" src="http://i.imgur.com/695GlT0.gif">
 	&lt;/li>
 &lt;/ul></pre>
 						</div>
@@ -80,7 +80,7 @@
 					</div>
 
 					<ul id="step-pagination" class="nav nav-pills">
-						<li id="pagination-loading"><img style="margin:0;" src="https://www.codepolitan.com/assets/img/loading.gif"></li>
+						<li id="pagination-loading"><img style="margin:0;" src="http://i.imgur.com/695GlT0.gif"></li>
 					</ul>
 
 				</article>
